--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,6 +10,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("../images/sports.png");
+  height: 100%;
+}
+
+#root{
+  height: 100%;
 }
 
 code {
