--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,10 @@
+:root {
+  --primary-main: #ffffff;
+  --primary-turquoise: #0097b8;
+  --primary-turquoiseDark: #00768f;
+
+  --seondary-main: #000000;
+}
 html {
   height: 100%;
 }
