Delete button added. Add participants rebuilded.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,7 @@
   --primary-main: #ffffff;
   --primary-turquoise: #0097b8;
   --primary-turquoiseDark: #00768f;
+  --delete-main: #af0000;
 
   --seondary-main: #000000;
 }
